[gd_scene load_steps=15 format=3 uid="uid://c4x387uwoyc80"]

[ext_resource type="Texture2D" uid="uid://6etvbr5an2sq" path="res://assets/worldassets/background.png" id="1_01wd8"]
[ext_resource type="Script" path="res://scenes/levels/plow_scene.gd" id="1_xsc1j"]
[ext_resource type="Texture2D" uid="uid://6ayiovc4wsn4" path="res://assets/worldassets/Driveway28.png" id="2_n5i5w"]
[ext_resource type="PackedScene" uid="uid://c0gtdb3t1arxw" path="res://scenes/driveway/driveway.tscn" id="3_uiv80"]
[ext_resource type="PackedScene" uid="uid://phnel5y07u84" path="res://scenes/snowplow/snowplow.tscn" id="4_0q7nr"]
[ext_resource type="PackedScene" uid="uid://bcua2nt31xlpp" path="res://scenes/player_controller/player_controller.tscn" id="5_55lr2"]
[ext_resource type="Texture2D" uid="uid://dklxm2oyeur4" path="res://assets/worldassets/snowflake.png" id="6_fss7k"]
[ext_resource type="PackedScene" uid="uid://cu75my3muqypm" path="res://scenes/quicktime/quick_time.tscn" id="6_h8t0s"]
[ext_resource type="Texture2D" uid="uid://ba8hy6abg2r1b" path="res://assets/ControllerMap/start.png" id="9_ol3o8"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_uwtkw"]
texture = ExtResource("2_n5i5w")
texture_region_size = Vector2i(28, 56)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-14, -28, 14, -28, 14, 28, -14, 28)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-14, -28, 14, -28, 14, 28, -14, 28)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_ka4ej"]
tile_size = Vector2i(28, 56)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_uwtkw")

[sub_resource type="Curve" id="Curve_0tp3v"]
min_value = -60.0
max_value = 60.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.205674, -12.1387), 0.0, 0.0, 0, 0, Vector2(0.326241, 16.0405), 0.0, 0.0, 0, 0, Vector2(0.41844, -13.2659), 0.0, 0.0, 0, 0, Vector2(0.556738, -11.0116), 0.0, 0.0, 0, 0, Vector2(0.797872, 21.6763), 0.0, 0.0, 0, 0, Vector2(0.950355, 13.7861), 0.0, 0.0, 0, 0, Vector2(0.985816, -25.6647), 0.0, 0.0, 0, 0]
point_count = 8

[sub_resource type="CurveTexture" id="CurveTexture_p37d4"]
width = 2048
curve = SubResource("Curve_0tp3v")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_mxx8v"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(640, 1, 1)
gravity = Vector3(0, 10, 0)
tangential_accel_max = 2.58
tangential_accel_curve = SubResource("CurveTexture_p37d4")

[node name="MainScene" type="Node2D"]
script = ExtResource("1_xsc1j")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(580, 327)
texture = ExtResource("1_01wd8")

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(589, 646)
tile_set = SubResource("TileSet_ka4ej")
format = 2
layer_0/tile_data = PackedInt32Array(131052, 0, 0, 196588, 0, 0, 131053, 0, 0, 196589, 0, 0, 131054, 0, 0, 196590, 0, 0, 131055, 0, 0, 196591, 0, 0, 131056, 0, 0, 196592, 0, 0, 131057, 0, 0, 196593, 0, 0, 131058, 0, 0, 196594, 0, 0, 131059, 0, 0, 196595, 0, 0, 131060, 0, 0, 196596, 0, 0, 131061, 0, 0, 196597, 0, 0, 131062, 0, 0, 196598, 0, 0, 131063, 0, 0, 196599, 0, 0, 131064, 0, 0, 196600, 0, 0, 131065, 0, 0, 196601, 0, 0, 131066, 0, 0, 196602, 0, 0, 131067, 0, 0, 196603, 0, 0, 131068, 0, 0, 196604, 0, 0, 131069, 0, 0, 196605, 0, 0, 131070, 0, 0, 196606, 0, 0, 131071, 0, 0, 196607, 0, 0, 65536, 0, 0, 131072, 0, 0, 65537, 0, 0, 131073, 0, 0, 65538, 0, 0, 131074, 0, 0, 65539, 0, 0, 131075, 0, 0, 65540, 0, 0, 131076, 0, 0, 65541, 0, 0, 131077, 0, 0, 65542, 0, 0, 131078, 0, 0, 65543, 0, 0, 131079, 0, 0, 65544, 0, 0, 131080, 0, 0, 65545, 0, 0, 131081, 0, 0, 65546, 0, 0, 131082, 0, 0, 65547, 0, 0, 131083, 0, 0, 65548, 0, 0, 131084, 0, 0, 65549, 0, 0, 131085, 0, 0, 65550, 0, 0, 131086, 0, 0, 65551, 0, 0, 131087, 0, 0, 65552, 0, 0, 131088, 0, 0, 65553, 0, 0, 131089, 0, 0, 65554, 0, 0, 131090, 0, 0, 65555, 0, 0, 131091, 0, 0, 65556, 0, 0, 131092, 0, 0, 131051, 0, 0, 196587, 0, 0, 65557, 0, 0, 131093, 0, 0, 65515, 0, 0, 65516, 0, 0, 65517, 0, 0, 65518, 0, 0, 65519, 0, 0, 65520, 0, 0, 65521, 0, 0, 65522, 0, 0, 65523, 0, 0, 65524, 0, 0, 65525, 0, 0, 65526, 0, 0, 65527, 0, 0, 65528, 0, 0, 65529, 0, 0, 65530, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0)

[node name="Driveway" parent="." instance=ExtResource("3_uiv80")]
position = Vector2(20, 90)
player_num = 1
metadata/player_num = 1

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(551, 1)
amount = 871
process_material = SubResource("ParticleProcessMaterial_mxx8v")
texture = ExtResource("6_fss7k")
lifetime = 10.0
speed_scale = 2.0
randomness = 1.0

[node name="QuickTime" parent="." instance=ExtResource("6_h8t0s")]
position = Vector2(461, 269)
scale = Vector2(1.695, 1.695)

[node name="Timer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="SnowplowComing" type="ProgressBar" parent="."]
offset_left = 209.0
offset_top = 42.0
offset_right = 950.0
offset_bottom = 113.0

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 3.0
offset_right = 1156.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.65098)

[node name="BeginButton" type="Button" parent="."]
offset_left = 421.0
offset_top = 346.0
offset_right = 737.0
offset_bottom = 427.0
theme_override_font_sizes/font_size = 25
text = "   Begin!"

[node name="RestartButton" type="Button" parent="."]
visible = false
offset_left = 424.0
offset_top = 448.0
offset_right = 740.0
offset_bottom = 529.0
theme_override_font_sizes/font_size = 25
text = "Restart"

[node name="Player_Controller" parent="." instance=ExtResource("5_55lr2")]
position = Vector2(42, 550)

[node name="SnowPlow" parent="." instance=ExtResource("4_0q7nr")]
position = Vector2(1392, 436)

[node name="Win" type="Label" parent="."]
visible = false
offset_left = 116.0
offset_top = 176.0
offset_right = 1067.0
offset_bottom = 351.0
theme_override_font_sizes/font_size = 128
text = "YOU SURVIVED!"

[node name="Plowd" type="Label" parent="."]
visible = false
offset_left = 310.0
offset_top = 210.0
offset_right = 840.0
offset_bottom = 385.0
theme_override_font_sizes/font_size = 128
text = "PLOW'D!"

[node name="Start" type="Sprite2D" parent="."]
position = Vector2(529, 388)
scale = Vector2(0.775, 0.775)
texture = ExtResource("9_ol3o8")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="BeginButton" to="." method="_on_begin_button_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="shovel_handler" from="Player_Controller" to="." method="_on_player_shovel_handler"]
